# declarai

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  LICENSE  README.md  experiment.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  requirements.txt
.github/workflows/: ci.yml  coverage-report.yml  publish-docs.yml  puiblish-package.yml  test.yaml
beginners-guide/: index.html
beginners-guide/controlling-task-behavior/: index.html
beginners-guide/debugging-tasks/: index.html
beginners-guide/recap/: index.html
beginners-guide/simple-task/: index.html
best-practices/: index.html
changelog/: index.html
contribute/: index.html
css/: extra.css  mkdocstrings.css
docs/: CNAME  changelog.md  contribute.md  index.md  mkdocs.yml  newsletter.md
docs/beginners-guide/: controlling-task-behavior.md  debugging-tasks.md  index.md  recap.md  simple-task.md
docs/best-practices/: index.md
docs/css/: custom.css  extra.css
docs/docs/: CNAME  changelog.md  index.md
docs/features/: index.md  jinja_templating.md  language-model-parameters.md  magic.md  multi-model-multi-provider.md  planning-future-tasks.md  streaming.md
docs/integrations/: index.md
docs/overrides/: main.html
docs/providers/: azure_openai.md  index.md  openai.md
evals/: README.md  evaluator.py  main.py  runner.py  simple.py
evals/extraction/: __init__.py  multiple_value.py  multiple_value_multi_types.py  single_value.py
evals/generation/: __init__.py  structured.py  structured_open_ended.py  structured_strict_complex.py  unstructured_long_form.py  unstructured_short_form.py
evals/logical_tasks/: sequence.py
evals/manipulation/: __init__.py
evals/metadata_significance/: __init__.py  simple_task_significance.py
examples/: declarai_intro.ipynb  function_of_functions.py  sequence.py  sequence_with_search.py  simple.py  test.py
examples/deployments/: index.html
features/: index.html
features/chat/: index.html
features/evals/: index.html
features/jinja_templating/: index.html
features/language-model-parameters/: index.html
features/magic/: index.html
features/middlewares/: index.html
features/multi-model-multi-provider/: index.html
features/planning-future-tasks/: index.html
features/streaming/: index.html
integrations/: index.html
integrations/wandb/: latest-run
js/: custom.js
newsletter/: index.html
providers/: index.html
providers/azure_openai/: index.html
providers/openai/: index.html
reference/SUMMARY/: index.html
reference/declarai/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
src/declarai/: __init__.py  _base.py  (+9 more)
tests/: test_declarai.py
(+291 files in other folders)
