[tool.poetry]
name = "declarai"
version = "0.1.0"
description = ""
authors = ["Aviv Almashanu <avivex1000@gmail.com>"]
readme = "README.md"
packages = [{include = "declarai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7.1"
openai = "^0.27.8"
pydantic = {version = "^1.8.2", optional = true}
jsonref = {version = "^1.1.0", optional = true}
wandb = {version = "^0.15.7", optional = true}
wandb-addons = {version = "^0.0.1", optional = true}


[tool.poetry.group.dev.dependencies]
pylint = "*"
black = "*"
isort = "*"
pytest = "*"
pytest-cov = "^4.1.0"
rich = "^13.4.2"

[tool.poetry.extras]
pydantic = ["pydantic", "jsonref"]
wandb = ["wandb", "wandb-addons"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
