[tool.poetry]
name = "declarai"
version = "0.1.3"
description = ""
authors = ["Aviv Almashanu <avivex1000@gmail.com>"]
readme = "README.md"
packages = [{include = "declarai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7.1"
openai = "^0.27.8"
pydantic = "^1.8.2"
jsonref = "^1.1.0"
wandb = {version = "^0.15.8", optional = true}


[tool.poetry.group.dev.dependencies]
pylint = "^2.13.9"
black = "^23.3.0"
isort = "^5.11.5"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
rich = "^13.4.2"
mkdocs-material = "^9.1.21"

[tool.poetry.extras]
wandb = ["wandb"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
