[tool.poetry]
name = "declarai"
version = "0.1.11"
description = "Declarai, turning Python code into LLM tasks, easy to use, and production-ready."
authors = ["Aviv Almashanu <avivex1000@gmail.com>"]
readme = "README.md"
packages = [{include = "declarai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.8"
pydantic = "^1.8.2"
jsonref = "^1.1.0"
wandb = {version = "^0.15.8", optional = true}
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.13.9"
black = "^23.3.0"
isort = "^5.11.5"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
rich = "^13.4.2"
mkdocs-material = "9.2.0b1"
mkdocstrings = {version = "^0.22.0"}
mkdocs-autorefs = "^0.5.0"
mkdocstrings-python = "^1.5.0"
mkdocstrings-crystal = "0.3.6"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
pylint-pydantic = "^0.2.4"

[tool.poetry.extras]
wandb = ["wandb"]
postgresql = ["psycopg2"]
redis = ["redis"]
mongo = ["pymongo"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 150

[tool.pylint.format]
max-line-length = "150"